--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,21 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
     }
+
+    apply plugin: 'checkstyle'
+
+    task checkstyle(type: Checkstyle) {
+        source 'src'
+        include '**/*.java'
+        exclude '**/gen/**'
+
+        classpath = files()
+    }
+
+    checkstyle {
+        toolVersion = '7.3'
+        configFile file("${project.rootDir}/config/checkstyle.xml")
+    }
 }
 
 task clean(type: Delete) {
