--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,21 +23,19 @@ android {
 }
 
 dependencies {
-    // Support
+    compile ('com.github.wordpress-mobile.WordPress-FluxC-Android:fluxc:develop-SNAPSHOT') {
+        exclude group : 'com.android.support'
+    }
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta1'
-
-    // Libraries
+    compile 'com.android.support:support-v4:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.google.dagger:dagger:2.0.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton.timber:timber:3.1.0'
-    compile 'org.wordpress:persistentedittext:1.+'
-
-    // FluxC (from Jitpack)
-    compile ('com.github.wordpress-mobile.WordPress-FluxC-Android:fluxc:develop-SNAPSHOT') {
-        exclude group :'com.android.support'
-    }
+    compile 'org.wordpress:persistentedittext:1.0.2'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.0.2'
     provided 'org.glassfish:javax.annotation:10.0-b28'
 }
