This big commit adds new features to the app (Don't look, Cluncky code!!): - Show posts from a test site of mine. - Add the ability ofpublish a new post on the site.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -24,6 +25,11 @@
         </activity>
         <activity android:name=".postlist.PostListActivity"
                   android:theme="@style/WordPress"/>
+
+        <!-- Services -->
+        <service
+            android:name=".misc.PostUploadService"
+            android:label="Post Upload Service" />
     </application>
 
 </manifest>
